# Genuary2024

flocking/: Cargo.toml
flocking/src/: main.rs
flocking/src/boids_sim/: app.rs  boid_bundle.rs  components.rs  consts.rs  mod.rs  prelude.rs  update_systems.rs
p21-new-library/: Cargo.toml
p21-new-library/src/: main.rs
p22-point-line-plane/: Cargo.toml
p26-grow-a-seed/: .gitignore  Cargo.toml  readme.md
p26-grow-a-seed/src/: main.rs
p26-grow-a-seed/src/seed_sim/: app.rs  consts.rs  grow_system.rs  mod.rs  organ_impls.rs  organ_parent_transform_propigation.rs  parent_retargeting.rs  plant_bundle.rs  plant_organs_resources.rs  prelude.rs  seed_components.rs  stem_organ.rs  system_updates.rs
src/boids_sim/: app.rs  components.rs  consts.rs  mod.rs  update_systems.rs
