[package]
name = "p21-new-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colourado-iter = "1.2.0"
rand = { version = "0.8.5" }
rand_chacha = "0.3.1"
turtle = {git = "https://github.com/sunjay/turtle"}
